--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,24 +1,13 @@
-<html>
-    <head>
-      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <title>Olmeiro:WEB</title>
-    </head>
-    <body>
-        <div>
-          <h1><a href="/"> Django chicos Blog </a></h1 >
-        </div>
+{% extends 'blog/base.html' %}
 
-        {% for post in posts %}
-        <div>
-          <p> publicado: {{ post.published_date }} </p>
-          <h1>
-            <a href = "">{{ post.title }} </a>
-          </h1 >
-            <p>{{ post.text|linebreaksbr }} </p>
-        </div >
-
-        {% endfor %}
-
-    </body>
-</html>
+{% block content %}
+  {% for post in posts %}
+      <div class="post">
+          <div class="date">
+              <p>published: {{ post.published_date }}</p>
+          </div>
+          <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+          <p>{{ post.text|linebreaksbr }}</p>
+      </div>
+  {% endfor %}
+{% endblock%}
