--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,6 +11,9 @@
     <body>
 
     <div class="page-header">
+        {% if user.is_authenticated %}
+          <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+        {% endif %}
         <h1><a href="/">Django Girls Blog</a></h1>
     </div>
 
@@ -22,6 +25,6 @@
             </div>
         </div>
     </div>
-    
+
 </body>
 </html>
